--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   pin_code_fields: ^8.0.1
   intl: ^0.18.1
   flutter_html: ^3.0.0-beta.2
+  curved_navigation_bar: ^1.0.6
+
 
 dev_dependencies:
   flutter_test:
