--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   qr_flutter: ^4.1.0
   flutter_barcode_scanner: ^2.0.0
   curved_navigation_bar: ^1.0.6
+  dotted_border: ^2.1.0
 
 
 dev_dependencies:
