--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   dotted_border: ^2.1.0
   carousel_slider: ^4.2.1
+  ai_barcode_scanner: ^5.1.1+2
 
 
 dev_dependencies:
