--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   dotted_border: ^2.1.0
   carousel_slider: ^4.2.1
   ai_barcode_scanner: ^5.1.1+2
+  flutter_advanced_switch: ^3.1.0
 
 
 
