--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,10 @@ dependencies:
   carousel_slider: ^4.2.1
   ai_barcode_scanner: ^5.1.1+2
   flutter_advanced_switch: ^3.1.0
+  screenshot: ^3.0.0
+  permission_handler: ^11.3.1
+  device_info_plus: ^10.1.0
+  image_gallery_saver: ^2.0.3
 
 
 
